--- a/parcialOlivito/parcialOlivito.cbp
+++ b/parcialOlivito/parcialOlivito.cbp
@@ -40,6 +40,10 @@
 		</Unit>
 		<Unit filename="color.h" />
 		<Unit filename="hardcodeo.h" />
+		<Unit filename="informes.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="informes.h" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
